test/bad-call.ursa
let h = 3
let g = fn(): Int { h() }
let f = fn(): Int { g() }
f()
